--- a/web/mubao_ocr/package.json
+++ b/web/mubao_ocr/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "axios": "^1.2.1",
+    "socket.io-client": "^4.5.4",
     "typescript": "^4.9.3",
     "unocss": "^0.47.6",
     "vite": "^4.0.0",
